--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="client_id2">759985624702-0h8mtc96t27oiq54j3q8f1l0j566e327.apps.googleusercontent.com</string>
     <string name="default_web_client_id">637769902026-kn138mt6f8c080b95qr7k0gc214jsgu4.apps.googleusercontent.com</string>
     <string name="guest">Skip</string>
+    <string name="discriptionProductDetails">Discription</string>
+    <string name="reviewProductDetails">Review</string>
 </resources>
