--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,20 @@
     <string name="client_id2">759985624702-0h8mtc96t27oiq54j3q8f1l0j566e327.apps.googleusercontent.com</string>
     <string name="default_web_client_id">637769902026-kn138mt6f8c080b95qr7k0gc214jsgu4.apps.googleusercontent.com</string>
     <string name="guest">Skip</string>
+    <string name="title_activity_main2">MainActivity2</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="category">Category</string>
+    <string name="profile">Profile</string>
+    <string name="_category">Category</string>
+    <string name="_profile">Profile</string>
+    <string name="brands">Brands</string>
+    <string name="brand">Brands</string>
     <string name="discriptionProductDetails">Discription</string>
     <string name="reviewProductDetails">Review</string>
+    <string name="tv_size" />
+    <string name="tv_sizeOption">Size</string>
+    <string name="tv_colorOption">Color</string>
+    <string name="btn_addToCard">Add To Card</string>
 </resources>
